# llm-log-triage

./: .env.example  .gitignore  DISCLAIMER.md  LICENSE  README.md  pyproject.toml
.github/workflows/: README.md  ci.yml  eval-gate.yml  manual-judge-eval.yml  manual-langsmith-eval.yml
data/: golden_set.README.md  golden_set.json
docs/: README.md  ROADMAP.md  architecture.md
docs/eval-runs/: README.md  judge-2026-06-14T144910Z.json  judge-2026-06-14T162351Z.json  judge-2026-06-14T162423Z.json  judge-fail-smoke-latest.json  judge-latest.json  langsmith-eval-2026-06-14T144112Z.json  langsmith-eval-2026-06-14T162947Z.json  notebook-2026-06-14T155344Z.json  notebook-2026-06-14T155733Z.json  notebook-2026-06-14T160028Z.json  notebook-2026-06-14T160244Z.json  notebook-2026-06-14T160422Z.json  notebook-2026-06-14T161347Z.json  notebook-2026-06-14T162052Z.json  notebook-2026-06-14T162058Z.json  notebook-2026-06-14T162107Z.json  notebook-2026-06-14T162113Z.json  notebook-2026-06-14T162120Z.json  notebook-latest.json
notebooks/: explore.ipynb
scripts/: README.md  run_judge_eval.sh  run_langsmith_eval_anthropic_v3.sh  run_langsmith_eval_golden.sh  run_streamlit.sh
src/llm_log_triage/: __main__.py  cache.py  chain.py  cli.py  eval_checks.py  judge.py  judge_report.py  langsmith_eval.py  notebook_display.py  notebook_report.py  (+5 more)
tests/: conftest.py  test_eval_checks.py  test_golden_set.py  test_instrumentation.py  test_judge.py  test_judge_report.py  test_langsmith_eval.py  test_notebook.py  test_notebook_report.py  test_providers.py  test_schema.py
ui/: streamlit_app.py
(+3 files in other folders)
