[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-log-triage"
version = "1.0.0"
description = "LLM log triage — structured JSON from raw logs with golden-set evals and LangSmith integration"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Khwaja Khan" }]
dependencies = [
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "streamlit>=1.40",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "jupyter>=1.1",
    "ipykernel>=6.29",
]
obs = [
    "langsmith>=0.2",
    "opentelemetry-api>=1.28",
    "opentelemetry-sdk>=1.28",
    "openinference-instrumentation-langchain>=0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/llm_log_triage"]

[tool.hatch.build]
sources = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "llm: tests that call live LLM APIs",
    "smoke: quick integration smoke tests",
    "judge: LLM-as-Judge coherence/actionability evals (extra API cost)",
]
filterwarnings = ["ignore::DeprecationWarning"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
